--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatcaniuse",
+  "name": "whatcanweuse",
   "version": "0.0.1",
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
   "description": "Library & CLI tool to check which features can be used for all browsers in a browserslist configuration",
