--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": "dist/index.js",
   "files": [
     "dist"
   ],
