--- a/package.json
+++ b/package.json
@@ -36,23 +36,25 @@
   },
   "dependencies": {
     "browserslist": "^4.23.2",
-    "caniuse-lite": "^1.0.30001642",
+    "caniuse-lite": "^1.0.30001643",
+    "object.groupby": "^1.0.3",
     "picocolors": "^1.0.1",
     "window-size": "^1.1.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.23.1",
+    "@antfu/eslint-config": "^2.23.2",
     "@tsconfig/strictest": "^2.0.5",
     "@types/caniuse-lite": "^1.0.5",
     "@types/node": "^20.14.11",
+    "@types/object.groupby": "^1.0.4",
     "@types/window-size": "^1.1.4",
-    "@vitest/coverage-v8": "^2.0.3",
+    "@vitest/coverage-v8": "^2.0.4",
     "eslint": "^9.7.0",
     "prettier": "^3.3.3",
-    "tsup": "^8.2.1",
+    "tsup": "^8.2.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
-    "vitest": "^2.0.3"
+    "vitest": "^2.0.4"
   },
   "pnpm": {
     "peerDependencyRules": {
