--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatcanweuse",
   "version": "0.0.5",
-  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
+  "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c",
   "description": "Library & CLI tool to check which features can be used for all browsers in a browserslist configuration",
   "author": "Ali Tas",
   "license": "ISC",
@@ -30,37 +30,30 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "tsx --watch src/index.ts",
-    "build": "tsup",
+    "build": "tsdown",
     "test": "vitest --coverage",
     "lint": "tsc && eslint ."
   },
   "dependencies": {
-    "browserslist": "^4.25.1",
-    "caniuse-lite": "^1.0.30001731",
+    "browserslist": "^4.28.0",
+    "caniuse-lite": "^1.0.30001754",
     "object.groupby": "^1.0.3",
     "picocolors": "^1.1.1",
     "window-size": "^1.1.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.0.0",
-    "@tsconfig/strictest": "^2.0.5",
+    "@antfu/eslint-config": "^6.2.0",
+    "@tsconfig/strictest": "^2.0.8",
     "@types/caniuse-lite": "^1.0.5",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.10.1",
     "@types/object.groupby": "^1.0.4",
     "@types/window-size": "^1.1.4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.32.0",
+    "@vitest/coverage-v8": "^4.0.9",
+    "eslint": "^9.39.1",
     "prettier": "^3.6.2",
-    "tsup": "^8.5.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.4"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "allowedVersions": {
-        "eslint": "9"
-      }
-    }
+    "tsdown": "^0.16.4",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.9"
   }
 }
